AdminUsuaris editar finished

--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/crear.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/crear.html.twig
@@ -9,20 +9,20 @@
 		      	<p>Cal afegir la següent informació:</p>
 		        <label>Nom d'usuari</label>
 				<div class="form-group">
-				  <input type="text" class="form-control" name="usuari" required>
+				  <input type="text" class="form-control" name="usuari"  placeholder="Usuari" required>
 				</div>
 		        <label>Email</label>
 		       	<div class="form-group">
-				  <input type="email" class="form-control" name="email" required>
+				  <input type="email" class="form-control" name="email" placeholder="usuari@exemple.com" required>
 				</div>
 				<label>Contrasenya</label>
 		       	<div class="form-group">
-				  <input type="text" class="form-control" name="contrasenya" required>
+				  <input type="text" class="form-control" name="contrasenya" placeholder="*****" required>
 				</div>
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Crear</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Crear</button>
 	        </div>
 		</form><!-- /.form -->
 
