--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/editar.html.twig
@@ -2,25 +2,35 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Editar notícia</h4>
+          <h4 class="modal-title">Editar l'usuari "{{ usuari.username }}"</h4>
         </div>
-		<form action="{{ path("noticies_actualitzar", { 'id': noticiaEditable.id }) }}" method="post">
+		<form action="{{ path("usuaris_editar_confirmar") }}" method="post">
 	      	<div class="modal-body"> 	
 		      	<p>Es pot modificar la següent informació:</p>
-		        <label>Títol</label>
-				<div class="form-group">
-				  <input type="text" class="form-control" name="titolEditar" required="required" value="{{ noticiaEditable.titol }}">
-				</div>
-		        <label>Contingut</label>
+		      	<input type="hidden" name="emailOriginal" value="{{ usuari.email }}">
+		      	<input type="hidden" name="usuari" value="{{ usuari.username }}">
+		      	
+		        <label>Email</label>
 		       	<div class="form-group">
-				  <input type="text" class="form-control" rows="3" name="contingutEditar" required="required" value="{{ noticiaEditable.contingut }}">
+				  <input type="email" class="form-control" name="email" value="{{ usuari.email }}" required>
 				</div>
+				<label>Contrasenya *</label>
+		       	<div class="form-group">
+				  <input type="password" class="form-control" name="contrasenya" placeholder="*****">
+				</div>
+				<label>Confirmar contrasenya</label>
+		       	<div class="form-group">
+				  <input type="password" class="form-control" name="confirmar" placeholder="*****">
+				</div>
+				<p class="text-muted text-right" style="font-size:11px;margin-top:-10px;">* si el camp es deixa buit, no es modificarà</p>
+				
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Actualitzar</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Editar</button>
 	        </div>
 		</form><!-- /.form -->
 
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
+ 
