--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -26,7 +26,11 @@
                 }
         })
 	} );
-		</script>
+
+	$(document).on('hidden.bs.modal', function (e) {
+	    $(e.target).removeData('bs.modal');
+	});
+	</script>
 
     <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
