Fixed admin eliminar + AdminUsuaris finished

--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/eliminar.html.twig
@@ -1,7 +1,7 @@
 {% extends 'PrincipalBundle:AdminGuia:baseModal.html.twig' %}
 
 {% block arxiuTitle %}
-	Eliminar <strong>{{ info.nivell }}</strong>
+	<h4 class="text-danger">Eliminar <strong>{{ info.nivell }}</strong></h4>
 {% endblock %}
 
 
