--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/eliminar.html.twig
@@ -1,18 +1,18 @@
- <div class="modal-dialog ">
+ <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Eliminar notícia</h4>
+          <h4 class="modal-title text-danger">Eliminar l'usuari "{{ usuari.username }}"</h4>
         </div>
-		<form action="{{ path("noticies_confirm", { 'id': noticia.id }) }}" method="post">
+		<form action="{{ path("usuaris_eliminar_confirmar") }}" method="post">
 	      	<div class="modal-body"> 	
-		      	<p>S'eliminarà la notícia amb la següent informació:</p>
-		        <label>Títol</label>
-				<p>{{ noticia.titol }} </p>
-		        <div class="space10"></div>
+		      	<strong class="text-danger">S'eliminarà l'usuari amb la següent informació:</strong>
+		      	<input type="hidden" name="usuari" value="{{ usuari.username }}">
+		      	<div class="space10"></div>
+		      	
+		      	<p><strong>Usuari:</strong> {{ usuari.username }}</p>
+		      	<p><strong>Email:</strong> {{ usuari.email }}</p>
 		        
-		        <label>Contingut</label>
-				<p>{{ noticia.contingut }} </p>
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
@@ -22,3 +22,4 @@
 
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
+ 
