--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -7,9 +7,17 @@
 	
 <style>
 .lateral{
-	position: relative;
-	margin:0;
-	margin-bottom:8px;
+	padding:2px 10px;
+	text-align: center;
+}
+
+.btn-lateral{
+	width:250px;
+}
+a.actiu{
+	background-color: gray;
+	border-color: gray;
+	color: white;
 }
 </style>	
 {% endblock %}
@@ -49,27 +57,39 @@
 	{% endfor %}	
 
 <div class="row" style="margin-left:0px;margin-right:10px">
-        
-	<div class="col-xs-9 col-sm-7 col-md-4 col-lg-4 well" style="margin-right:10px">
-		
+	<div class="col-xs-11 col-sm-10 col-md-4 col-lg-4" style="margin-right:10px">
 		<div class="btn-group-vertical">
-			 <div class="btn-group {% if seleccio is sameas("lletres") %}open{% endif %}">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"> Lletres <span class="caret"></span> </button>
-			    <ul class="dropdown-menu lateral">
-			      <li class="{% if seleccio is sameas("lletres") %}active{% endif %}"><a href="{{ path('fons_select', { 'seleccio': 'lletres' }) }}">1294 - 1913</a></li>
-			      <li class="{% if seleccio is sameas("llicencies") %}active{% endif %}"><a href="{{ path('fons_select', { 'seleccio': 'llicencies' }) }}">Llicències per demanar caritat</a></li>
-			      <li class="{% if seleccio is sameas("registres") %}active{% endif %}"><a href="{{ path('fons_select', { 'seleccio': 'registres' }) }}">Registres Itineris</a></li>
+		
+		
+			<button type="button" class="btn {% if seleccio is sameas("lletres") or seleccio is sameas("llicencies") or seleccio is sameas("registres") %}btn-primary{% else %}btn-default{% endif %}" 
+				data-toggle="collapse" data-target="#lletresMenu" style="margin-bottom:-1px;">
+			 	Lletres&nbsp;
+			 	<i class="icon-chevron-down"></i>
+			</button>
+			<div id="lletresMenu" class="collapse {% if seleccio is sameas("lletres") or seleccio is sameas("llicencies") or seleccio is sameas("registres") %}in{% endif %}" style="margin-left:15px;margin-right:15px">
+				<ul class="list-group">
+			      <a class="list-group-item lateral{% if seleccio is sameas("lletres") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'lletres' }) }}">1294 - 1913</a>
+			      <a class="list-group-item lateral{% if seleccio is sameas("llicencies") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'llicencies' }) }}">Llicències per demanar caritat</a>
+			      <a class="list-group-item lateral{% if seleccio is sameas("registres") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'registres' }) }}">Registres Itineris</a>
 			    </ul>
-			 </div> <!--/Lletres-->
+			</div><!--/Lletres-->
+		
+			<button type="button" class="btn {% if seleccio is sameas("manuals") or seleccio is sameas("beneficis") or seleccio is sameas("seu") or seleccio is sameas("patronat")%}btn-primary{% else %}btn-default{% endif %}" 
+				data-toggle="collapse" data-target="#manualsMenu" style="margin-bottom:-1px;">
+			 	Manuals de col·lacions beneficials&nbsp;
+			 	<i class="icon-chevron-down"></i>
+			</button>
+			<div id="manualsMenu" class="collapse {% if seleccio is sameas("manuals") or seleccio is sameas("beneficis") or seleccio is sameas("seu") or seleccio is sameas("patronat")%}in{% endif %}" style="margin-left:15px;margin-right:15px">
+				<ul class="list-group" >
+			      <a class="list-group-item lateral{% if seleccio is sameas("manuals") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'manuals' }) }}">Manuals 1271-1928</a>
+			      <a class="list-group-item lateral{% if seleccio is sameas("beneficis") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'beneficis' }) }}">Dotalies de beneficis</a>
+			      <a class="list-group-item lateral{% if seleccio is sameas("seu") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'seu' }) }}">Dotalies de fundacions de la Seu</a>
+			      <a class="list-group-item lateral{% if seleccio is sameas("patronat") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'patronat' }) }}">Processos sobre dret de patronat</a>
+			   
+			    </ul>
+			</div><!--/Manuals-->
+		
 			 
-			 <div class="btn-group">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"> Manual de col·lacions beneficials <span class="caret"></span> </button>
-			    <ul class="dropdown-menu lateral">
-			      <li class="{% if seleccio is sameas("lletres") %}active{% endif %}"><a href="{{ path('fons_select', { 'seleccio': 'lletres' }) }}">1294 - 1913</a></li>
-			      <li class="{% if seleccio is sameas("llicencies") %}active{% endif %}"><a href="{{ path('fons_select', { 'seleccio': 'llicencies' }) }}">Llicències per demanar caritat</a></li>
-			      <li class="{% if seleccio is sameas("registres") %}active{% endif %}"><a href="{{ path('fons_select', { 'seleccio': 'registres' }) }}">Registres Itineris</a></li>
-			    </ul>
-			 </div> <!--/Lletres-->
 			 
 		</div>
 		
