--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -58,7 +58,7 @@
     	
     	<!--formulari amb submit cap a /cerca, on el controlador mirara a kina taula ha dentrar i retornara info + variable indicant taula-->
     	<!--Cerca-->
-		<div class="row well">
+		<div class="row panel panel-default">
 			{% include 'ArxiuBundle:Fons:cerca.html.twig' %}
 		</div><!--/Cerca-->
 	
