--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -9,11 +9,39 @@
 			padding:2px 10px;
 			text-align: center;
 		}
-	</style>	
+	</style>
+	<link href="{{ asset('bundles/adg/css/dataTables.bootstrap.css') }}" rel="stylesheet"> 	
 {% endblock %}
 
 {% block javascripts %}
 	{{ parent() }}
+	
+    <script>   
+		$(document).ready(function() {
+			$('#fons_table').dataTable({
+	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
+	                "language": {
+	        			"sLengthMenu": "_MENU_ entrades per pàgina",
+	        			"sZeroRecords": "No s'ha trobat res",
+	        			"sInfo": "Trobades _TOTAL_ entrades",
+	        			"sInfoEmpty": "0 entrades trobades",
+	        			"sInfoFiltered": "(filtrades desde _MAX_ entrades totals)",
+	        			"oPaginate": {
+	        		        "sNext": "Següent",
+	        		        "sPrevious": "Anterior"
+	        		      },
+	        			"sSearch": "Cerca general: "
+	                }
+	        })
+		} );
+	
+		$(document).on('hidden.bs.modal', function (e) {
+		    $(e.target).removeData('bs.modal');
+		});
+	</script>
+
+    <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block body %}
@@ -65,11 +93,69 @@
 	
 		<!--si cerca no esta buit llavors mostrar taula amb estructura feta i casos if segons la variable de la taula-->
 		<!--Taula-->
-		<div class="row alert alert-warning">
-			taula
-			{% if info is not null  %}
-				bla
+		<div class="row">
+			{% if info is not null %}
 				<!--fer servir substring en el sql per els camps de dades-->
+				<table class="table table-striped table-bordered table-hover" id="fons_table">
+			        <thead>
+			            <tr>
+			                <th class="centered-text" id="idHeader" title="Tooltip!">Classificació</th>
+			                {% if tipus is sameas("fons") or tipus is sameas("mitra") or tipus is sameas("testaments") %}
+			                	<th class="centered-text">Dades</th>
+			                {% elseif tipus is sameas("capellans") or tipus is sameas("monges") %}
+			                	<th class="centered-text">Nom</th>
+			                	<th class="centered-text">Fitxa</th>
+			                {% elseif tipus is sameas("seminaristes") %}
+			                	<th class="centered-text">Nom</th>	
+			                {% elseif tipus is sameas("liberden") %}
+			                	<th class="centered-text">Institució</th>
+			                	<th class="centered-text">Foli</th>
+			               	{% elseif tipus is sameas("arxius") %}
+				                <th class="centered-text">Data</th>
+				                <th class="centered-text">Dades</th>
+			                {% endif %}
+						    <th class="centered-text">Operacions</th>            
+			            </tr>
+			        </thead>
+		            <tbody>
+		                {% for i in info %}
+		                    <tr>
+		                        <td style="min-width: 100px">{{ i.nodac }}</td>
+				                {% if tipus is sameas("fons") or tipus is sameas("mitra") or tipus is sameas("testaments") %}
+				                	<td>{{ i.dades }}</td>
+				                {% elseif tipus is sameas("capellans") or tipus is sameas("monges") %}
+				                	<td>{{ i.cognom }}</td>
+				                	<td>{{ i.fitxa }}</td>
+				                {% elseif tipus is sameas("seminaristes") %}
+				                	<td>{{ i.cognom }}</td>
+				                {% elseif tipus is sameas("liberden") %}
+				                	<td>{{ i.institucio }}</td>
+				                	<td>{{ i.foli }}</td>
+				                {% elseif tipus is sameas("arxius") %}
+				                	<td>{{ i.data }}</td>
+				                	<td>{{ i.dades }}</td>
+				                {% endif %}
+	                        	<td>
+	                        		{% if tipus is sameas("liberden") %}
+	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'tipus': tipus, 'id':i.id }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+	                        		{% else %}
+	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'tipus': tipus, 'id':i.num }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+	                        		{% endif %}
+				                	{% if is_granted('ROLE_ADMIN') %}
+		                        		<a data-toggle="modal" href="#" data-target="#editarFons" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
+		                        		<a data-toggle="modal" href="#" data-target="#eliminarFons" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
+	                        		{% endif %}
+	                        	</td>
+		                    </tr>
+		                {% endfor %}
+		            </tbody>
+		        </table>
+		        
+		        
+		    {% else %}
+		    	<div class="alert alert-info" style="margin-top:10px">
+					Els resultats es mostraran al realitzar la cerca.
+				</div>   
 			{% endif %}
 		</div><!--/Taula-->
 	</div>   
@@ -78,14 +164,18 @@
 		Cal escollir el contingut de la cerca.
 	</div>   
 {% endif %}	
-		
-	
-	
-
-	
-	<!--/info ampliada en modal-->
 </div>
-	
-	
 
+{# Modals #}
+<div class="modal" id="ampliarInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div><!-- /.modal -->
+
+<div class="modal" id="nouFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div><!-- /.modal -->
+
+<div class="modal" id="editarFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div><!-- /.modal -->
+
+<div class="modal" id="eliminarFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div><!-- /.modal -->
 {% endblock %}
