Finished ArxiuFons cerca

--- a/src/ADG/ArxiuBundle/Resources/views/Fons/menuLateral.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/menuLateral.html.twig
@@ -42,7 +42,7 @@
 			      <a class="list-group-item lateral{% if seleccio is sameas("llado") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'llado' }) }}">Pergamins de Llado</a>
 			      <a class="list-group-item lateral{% if seleccio is sameas("cadins") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'cadins' }) }}">Pergamins de Cadins</a>
 				</ul>
-			</div><!--/Manuals-->
+			</div><!--/Arxius-->
 		
 			<button type="button" class="btn {% if seleccio is sameas("notalarum") or seleccio is sameas("deposita") or seleccio is sameas("liberden") %}btn-primary{% else %}btn-default{% endif %}" 
 				data-toggle="collapse" data-target="#notariaMenu" style="margin-bottom:-1px;">
