--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -6,36 +6,39 @@
 {% endblock %}
 
 {% block javascripts %} 
-	
     <script>
-
-       
-	$(document).ready(function() {
-		$('#noticies_table').dataTable({
-				"aaSorting": [[ 0, "desc" ]],
-                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
-                "language": {
-        			"sLengthMenu": "_MENU_ entrades per pàgina",
-        			"sZeroRecords": "No s'ha trobat res",
-        			"sInfo": "Trobades _TOTAL_ entrades",
-        			"sInfoEmpty": "0 entrades trobades",
-        			"sInfoFiltered": "(filtrades desde _MAX_ entrades totals)",
-        			"oPaginate": {
-        		        "sNext": "Següent",
-        		        "sPrevious": "Anterior"
-        		      },
-        			"sSearch": "Cerca general: "
-                }
-        })
-	} );
-
-	$(document).on('hidden.bs.modal', function (e) {
-	    $(e.target).removeData('bs.modal');
-	});
+		$(document).ready(function() {
+			$('#noticies_table').dataTable({
+					"aoColumns": [
+				                { "sType": "date"},
+				                null,
+				                null,
+				                null
+				            ],
+				    "aaSorting": [[ 0, "desc" ]],
+	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
+	                "language": {
+	        			"sLengthMenu": "_MENU_ entrades per pàgina",
+	        			"sZeroRecords": "No s'ha trobat res",
+	        			"sInfo": "Trobades _TOTAL_ entrades",
+	        			"sInfoEmpty": "0 entrades trobades",
+	        			"sInfoFiltered": "(filtrades desde _MAX_ entrades totals)",
+	        			"oPaginate": {
+	        		        "sNext": "Següent",
+	        		        "sPrevious": "Anterior"
+	        		      },
+	        			"sSearch": "Cerca general: "
+	                }
+	        })
+		} );
+	
+		$(document).on('hidden.bs.modal', function (e) {
+		    $(e.target).removeData('bs.modal');
+		});
 	</script>
-
+	
     <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %}Noticies{% endblock %}
@@ -99,7 +102,7 @@
             <tbody>
                 {% for noticia in noticies %}
                     <tr>
-                        <td style="min-width: 100px">{{ noticia.data|date('d-m-Y') }}</td>
+                        <td style="min-width: 100px">{{ noticia.data|date('Y-m-d') }}</td>
                         <td>{{ noticia.titol }}</td>
                         <td>{{ noticia.contingut }}</td>
                         {% if is_granted('ROLE_ADMIN') %}
