--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -137,9 +137,9 @@
 				                {% endif %}
 	                        	<td>
 	                        		{% if tipus is sameas("liberden") %}
-	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'tipus': tipus, 'id':i.id }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'seleccio': seleccio, 'id':i.id }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
 	                        		{% else %}
-	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'tipus': tipus, 'id':i.num }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'seleccio': seleccio, 'id':i.num }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
 	                        		{% endif %}
 				                	{% if is_granted('ROLE_ADMIN') %}
 		                        		<a data-toggle="modal" href="#" data-target="#editarFons" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
