--- a/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
@@ -19,6 +19,17 @@
 					</a>
 				</div>
 			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Fons i series</h3>
+				</div>
+				<div class="panel-body list-group">
+					<a href=" {{ path('fons') }}" class="list-group-item">
+						<i class="icon-edit"></i>
+						Modificar fons
+					</a>
+				</div>
+			</div>
 			
 			
 		</div>
