--- a/src/ADG/PrincipalBundle/Resources/views/Menu/knp_menu.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Menu/knp_menu.html.twig
@@ -82,7 +82,7 @@
 {% endblock %}
 
 {% block spanElement %}
-	<span>{{ macros.attributes(item.labelAttributes) }}>
+	<span>{{ macros.attributes(item.labelAttributes) }}
 		{% if item.attribute('icon') is not empty  %}
     		<i class="{{ item.attribute('icon') }}"></i> 
     	{% endif %}
